# Brain-Vis

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
python_scripts/: functions.py  loaders.py  main.py  neuron_properties.py
python_scripts/modules/: clustering.py  playground.py  project_to_2d.py  timehist.py
scripts/: aggregate_edges.py
src/: context.hpp  edge.hpp  main.cpp  neuronProperties.hpp  preprocess.cpp  slider.hpp  utility.cpp  utility.hpp
src/preprocessEdges/: preprocessEdges.cpp
src/preprocessNeuronProperties/: preprocessNeuronProperties.cpp
src/vis/: QRangeSlider.cpp  QRangeSlider.hpp  binaryReader.hpp  bottomBar.cpp  bottomBar.hpp  bottomPanelTooltip.ui  context.hpp  histogramSliderWidget.cpp  histogramSliderWidget.hpp  histogramTooltip.ui  histogramWidget.cpp  histogramWidget.hpp  loaders.cpp  loaders.hpp  magmaColormap.cpp  magmaColormap.hpp  main.cpp  mainWindow.ui  popupWidget.cpp  popupWidget.hpp  rangeSliderWidget.cpp  rangeSliderWidget.hpp  slider.hpp  utility.hpp  visUtility.cpp  visUtility.hpp  visualisation.hpp
src/vis/shaders/: _bilboard_fallback.frag  bilboard.frag
vcpkg-modifications/: README.txt
vcpkg-modifications/ports/vtk/: portfile.cmake  vcpkg.json
